tutorials/studying/part-4/networking/http/forwarder/forwarder-frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: forwarder-frontend-virtualservice
spec:
  hosts:
  - "forwarder.frontend.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: fastapi-service.forwarder.svc.cluster.local
        port:
          number: 7600
